// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`circle tests with head 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="content "
        data-testid="circle"
      >
        <div
          class="text text_type_input text_color_input mb-4 absolute head string"
          data-cy="head"
          data-testid="head"
        >
          a
        </div>
        <div
          class="circle   default"
          data-cy="circle"
          data-testid="middleDiv"
        >
          <p
            class="text text_type_circle text_color_input letter"
            data-testid="letter"
          />
        </div>
        <p
          class="text text_type_input text_color_input mt-4 absolute index"
          data-testid="index"
        />
        <div
          class="text text_type_input text_color_input mt-4 absolute tail30 element"
          data-cy="tail"
          data-testid="tail"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="content "
      data-testid="circle"
    >
      <div
        class="text text_type_input text_color_input mb-4 absolute head string"
        data-cy="head"
        data-testid="head"
      >
        a
      </div>
      <div
        class="circle   default"
        data-cy="circle"
        data-testid="middleDiv"
      >
        <p
          class="text text_type_circle text_color_input letter"
          data-testid="letter"
        />
      </div>
      <p
        class="text text_type_input text_color_input mt-4 absolute index"
        data-testid="index"
      />
      <div
        class="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-cy="tail"
        data-testid="tail"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`circle tests with index 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="content "
        data-testid="circle"
      >
        <div
          class="text text_type_input text_color_input mb-4 absolute head element"
          data-cy="head"
          data-testid="head"
        />
        <div
          class="circle   default"
          data-cy="circle"
          data-testid="middleDiv"
        >
          <p
            class="text text_type_circle text_color_input letter"
            data-testid="letter"
          />
        </div>
        <p
          class="text text_type_input text_color_input mt-4 absolute index"
          data-testid="index"
        >
          5
        </p>
        <div
          class="text text_type_input text_color_input mt-4 absolute tail60 element"
          data-cy="tail"
          data-testid="tail"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="content "
      data-testid="circle"
    >
      <div
        class="text text_type_input text_color_input mb-4 absolute head element"
        data-cy="head"
        data-testid="head"
      />
      <div
        class="circle   default"
        data-cy="circle"
        data-testid="middleDiv"
      >
        <p
          class="text text_type_circle text_color_input letter"
          data-testid="letter"
        />
      </div>
      <p
        class="text text_type_input text_color_input mt-4 absolute index"
        data-testid="index"
      >
        5
      </p>
      <div
        class="text text_type_input text_color_input mt-4 absolute tail60 element"
        data-cy="tail"
        data-testid="tail"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`circle tests with letter 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="content "
        data-testid="circle"
      >
        <div
          class="text text_type_input text_color_input mb-4 absolute head element"
          data-cy="head"
          data-testid="head"
        />
        <div
          class="circle   default"
          data-cy="circle"
          data-testid="middleDiv"
        >
          <p
            class="text text_type_circle text_color_input letter"
            data-testid="letter"
          >
            a
          </p>
        </div>
        <p
          class="text text_type_input text_color_input mt-4 absolute index"
          data-testid="index"
        />
        <div
          class="text text_type_input text_color_input mt-4 absolute tail30 element"
          data-cy="tail"
          data-testid="tail"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="content "
      data-testid="circle"
    >
      <div
        class="text text_type_input text_color_input mb-4 absolute head element"
        data-cy="head"
        data-testid="head"
      />
      <div
        class="circle   default"
        data-cy="circle"
        data-testid="middleDiv"
      >
        <p
          class="text text_type_circle text_color_input letter"
          data-testid="letter"
        >
          a
        </p>
      </div>
      <p
        class="text text_type_input text_color_input mt-4 absolute index"
        data-testid="index"
      />
      <div
        class="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-cy="tail"
        data-testid="tail"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`circle tests with react element in head 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="content "
        data-testid="circle"
      >
        <div
          class="text text_type_input text_color_input mb-4 absolute head element"
          data-cy="head"
          data-testid="head"
        >
          <div
            class="content "
            data-testid="circle"
          >
            <div
              class="text text_type_input text_color_input mb-4 absolute head element"
              data-cy="head"
              data-testid="head"
            />
            <div
              class="circle   default"
              data-cy="circle"
              data-testid="middleDiv"
            >
              <p
                class="text text_type_circle text_color_input letter"
                data-testid="letter"
              >
                a
              </p>
            </div>
            <p
              class="text text_type_input text_color_input mt-4 absolute index"
              data-testid="index"
            />
            <div
              class="text text_type_input text_color_input mt-4 absolute tail30 element"
              data-cy="tail"
              data-testid="tail"
            />
          </div>
        </div>
        <div
          class="circle   default"
          data-cy="circle"
          data-testid="middleDiv"
        >
          <p
            class="text text_type_circle text_color_input letter"
            data-testid="letter"
          />
        </div>
        <p
          class="text text_type_input text_color_input mt-4 absolute index"
          data-testid="index"
        />
        <div
          class="text text_type_input text_color_input mt-4 absolute tail30 element"
          data-cy="tail"
          data-testid="tail"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="content "
      data-testid="circle"
    >
      <div
        class="text text_type_input text_color_input mb-4 absolute head element"
        data-cy="head"
        data-testid="head"
      >
        <div
          class="content "
          data-testid="circle"
        >
          <div
            class="text text_type_input text_color_input mb-4 absolute head element"
            data-cy="head"
            data-testid="head"
          />
          <div
            class="circle   default"
            data-cy="circle"
            data-testid="middleDiv"
          >
            <p
              class="text text_type_circle text_color_input letter"
              data-testid="letter"
            >
              a
            </p>
          </div>
          <p
            class="text text_type_input text_color_input mt-4 absolute index"
            data-testid="index"
          />
          <div
            class="text text_type_input text_color_input mt-4 absolute tail30 element"
            data-cy="tail"
            data-testid="tail"
          />
        </div>
      </div>
      <div
        class="circle   default"
        data-cy="circle"
        data-testid="middleDiv"
      >
        <p
          class="text text_type_circle text_color_input letter"
          data-testid="letter"
        />
      </div>
      <p
        class="text text_type_input text_color_input mt-4 absolute index"
        data-testid="index"
      />
      <div
        class="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-cy="tail"
        data-testid="tail"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`circle tests with react element in tail 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="content "
        data-testid="circle"
      >
        <div
          class="text text_type_input text_color_input mb-4 absolute head element"
          data-cy="head"
          data-testid="head"
        />
        <div
          class="circle   default"
          data-cy="circle"
          data-testid="middleDiv"
        >
          <p
            class="text text_type_circle text_color_input letter"
            data-testid="letter"
          />
        </div>
        <p
          class="text text_type_input text_color_input mt-4 absolute index"
          data-testid="index"
        />
        <div
          class="text text_type_input text_color_input mt-4 absolute tail30 element"
          data-cy="tail"
          data-testid="tail"
        >
          <div
            class="content "
            data-testid="circle"
          >
            <div
              class="text text_type_input text_color_input mb-4 absolute head element"
              data-cy="head"
              data-testid="head"
            />
            <div
              class="circle   default"
              data-cy="circle"
              data-testid="middleDiv"
            >
              <p
                class="text text_type_circle text_color_input letter"
                data-testid="letter"
              >
                b
              </p>
            </div>
            <p
              class="text text_type_input text_color_input mt-4 absolute index"
              data-testid="index"
            />
            <div
              class="text text_type_input text_color_input mt-4 absolute tail30 element"
              data-cy="tail"
              data-testid="tail"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="content "
      data-testid="circle"
    >
      <div
        class="text text_type_input text_color_input mb-4 absolute head element"
        data-cy="head"
        data-testid="head"
      />
      <div
        class="circle   default"
        data-cy="circle"
        data-testid="middleDiv"
      >
        <p
          class="text text_type_circle text_color_input letter"
          data-testid="letter"
        />
      </div>
      <p
        class="text text_type_input text_color_input mt-4 absolute index"
        data-testid="index"
      />
      <div
        class="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-cy="tail"
        data-testid="tail"
      >
        <div
          class="content "
          data-testid="circle"
        >
          <div
            class="text text_type_input text_color_input mb-4 absolute head element"
            data-cy="head"
            data-testid="head"
          />
          <div
            class="circle   default"
            data-cy="circle"
            data-testid="middleDiv"
          >
            <p
              class="text text_type_circle text_color_input letter"
              data-testid="letter"
            >
              b
            </p>
          </div>
          <p
            class="text text_type_input text_color_input mt-4 absolute index"
            data-testid="index"
          />
          <div
            class="text text_type_input text_color_input mt-4 absolute tail30 element"
            data-cy="tail"
            data-testid="tail"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`circle tests with tail 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="content "
        data-testid="circle"
      >
        <div
          class="text text_type_input text_color_input mb-4 absolute head element"
          data-cy="head"
          data-testid="head"
        />
        <div
          class="circle   default"
          data-cy="circle"
          data-testid="middleDiv"
        >
          <p
            class="text text_type_circle text_color_input letter"
            data-testid="letter"
          />
        </div>
        <p
          class="text text_type_input text_color_input mt-4 absolute index"
          data-testid="index"
        />
        <div
          class="text text_type_input text_color_input mt-4 absolute tail30 string"
          data-cy="tail"
          data-testid="tail"
        >
          b
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="content "
      data-testid="circle"
    >
      <div
        class="text text_type_input text_color_input mb-4 absolute head element"
        data-cy="head"
        data-testid="head"
      />
      <div
        class="circle   default"
        data-cy="circle"
        data-testid="middleDiv"
      >
        <p
          class="text text_type_circle text_color_input letter"
          data-testid="letter"
        />
      </div>
      <p
        class="text text_type_input text_color_input mt-4 absolute index"
        data-testid="index"
      />
      <div
        class="text text_type_input text_color_input mt-4 absolute tail30 string"
        data-cy="tail"
        data-testid="tail"
      >
        b
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
